# qr-code-generator-apid5cea556-d37e-4ba4-b32a-3f48a0ab0e0f

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: create_qr_code_service.py  server.py  update_qr_code_settings_service.py
